--- a/src/styles.css
+++ b/src/styles.css
@@ -142,7 +142,7 @@ button {
 
 .tasker-input-group .input-form {
   flex: 1;
-  text-align: right;
+  text-align: left;
 }
 
 .title-input {
@@ -150,12 +150,12 @@ button {
 }
 
 .title-input Input {
-  width: 100%;
+  width: 70%;
   margin: 10px;
 }
 
 .description-input {
-height: 100%;
+  height: 100%;
   margin: 10px;
   font-size: 16px;
 }
@@ -167,7 +167,8 @@ height: 100%;
 
 
 .input-save-group {
-  margin: 0px 10px 10px 0px;
+  text-align: right;
+  margin: 10px 10px 10px 0px;
 
 }
 
